--- a/housing price analysis regression.ipynb
+++ b/housing price analysis regression.ipynb
@@ -617,7 +617,7 @@
    "source": [
     "data = pd.get_dummies(data, columns=['ocean_proximity'], prefix='ocean_proximity')\n",
     "\n",
-    "# Calculate the correlation matrix, including the one-hot encoded columns\n",
+    "# Calculate the correlation matrix\n",
     "correlation_matrix = data.corr(numeric_only=True)  # Ensure only numeric columns are included\n",
     "\n",
     "# Plot the heatmap\n",
