--- a/housing price analysis regression.ipynb
+++ b/housing price analysis regression.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "910b8ccf",
    "metadata": {},
    "outputs": [],
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "5acf1745",
    "metadata": {},
    "outputs": [],
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "b4cc42c0",
    "metadata": {},
    "outputs": [
@@ -147,7 +147,7 @@
        "4         3.8462            342200.0        NEAR BAY  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "8842bcea",
    "metadata": {
     "scrolled": true
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "7cd8d2a0",
    "metadata": {},
    "outputs": [
@@ -333,7 +333,7 @@
        "max     6082.000000      15.000100       500001.000000  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -344,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "3f6c26c0",
    "metadata": {},
    "outputs": [
@@ -485,7 +485,7 @@
        "max     1162.000000       7.300305       489810.000000  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -504,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "00ba4616",
    "metadata": {
     "scrolled": true
@@ -524,7 +524,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -536,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "9d2b252b",
    "metadata": {},
    "outputs": [],
@@ -546,7 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "700daf5b",
    "metadata": {},
    "outputs": [
@@ -564,7 +564,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -575,7 +575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "772ffc44",
    "metadata": {},
    "outputs": [
@@ -599,7 +599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "1f21b270",
    "metadata": {},
    "outputs": [
@@ -638,7 +638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "b50d9a53",
    "metadata": {},
    "outputs": [
@@ -678,7 +678,7 @@
     "\n",
     "top_entropy = {k: v for k, v in top_entropy}\n",
     "\n",
-    "# Display the top 9 entropy values\n",
+    "# Display the top entropy values\n",
     "print(\"Top Entropy Values:\")\n",
     "for variable, entropy_val in top_entropy.items():\n",
     "    print(f\"{variable}: {entropy_val}\")\n",
@@ -687,7 +687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "64eda8f9",
    "metadata": {},
    "outputs": [
@@ -696,17 +696,17 @@
      "output_type": "stream",
      "text": [
       "Mutual Information Scores:\n",
-      "median_income                 0.376599\n",
-      "ocean_proximity_INLAND        0.199096\n",
-      "ocean_proximity_<1H OCEAN     0.097213\n",
-      "total_rooms                   0.039737\n",
-      "housing_median_age            0.032276\n",
-      "households                    0.029246\n",
-      "total_bedrooms                0.022948\n",
-      "ocean_proximity_NEAR BAY      0.020117\n",
-      "population                    0.020016\n",
-      "ocean_proximity_NEAR OCEAN    0.015804\n",
-      "ocean_proximity_ISLAND        0.001003\n",
+      "median_income                 0.378039\n",
+      "ocean_proximity_INLAND        0.192993\n",
+      "ocean_proximity_<1H OCEAN     0.098560\n",
+      "total_rooms                   0.039431\n",
+      "housing_median_age            0.032949\n",
+      "households                    0.030166\n",
+      "total_bedrooms                0.024142\n",
+      "population                    0.020831\n",
+      "ocean_proximity_NEAR OCEAN    0.012510\n",
+      "ocean_proximity_NEAR BAY      0.011574\n",
+      "ocean_proximity_ISLAND        0.000000\n",
       "dtype: float64\n"
      ]
     }
@@ -714,27 +714,22 @@
    "source": [
     "\n",
     "# Define the target variable\n",
-    "target_variable = 'median_house_value'  # Replace with your target column\n",
+    "target_variable = 'median_house_value'\n",
     "\n",
-    "# Perform Mutual Information Analysis\n",
-    "if data[target_variable].dtype == 'object':\n",
-    "    # For categorical target\n",
-    "    mi = mutual_info_classif(data.drop(columns=[target_variable]), data[target_variable])\n",
-    "else:\n",
-    "    # For continuous target\n",
-    "    mi = mutual_info_regression(data.drop(columns=[target_variable]), data[target_variable])\n",
+    "# Perform Mutual Information Analysis for a continuous target\n",
+    "mi = mutual_info_regression(data.drop(columns=[target_variable]), data[target_variable])\n",
     "\n",
     "# Map mutual information scores to feature names\n",
     "mi_scores = pd.Series(mi, index=data.drop(columns=target_variable).columns).sort_values(ascending=False)\n",
     "\n",
     "# Display mutual information scores\n",
     "print(\"Mutual Information Scores:\")\n",
-    "print(mi_scores)"
+    "print(mi_scores)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "686219ba",
    "metadata": {},
    "outputs": [
@@ -813,7 +808,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "34f2befe",
    "metadata": {},
    "outputs": [
